--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,26 +1,18 @@
+
+
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
-
- 
-
-name: Build and push a docker image
-
- 
+    branches: [ "main" ]
 
 jobs:
-  deploy:
-    name: Deploy
+  build:
+
     runs-on: ubuntu-latest
 
- 
-
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
+    - uses: actions/checkout@v3
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
