--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,14 +1,19 @@
-
-
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
+ 
+    #iiI
+ 
+
+name: Build and push a docker image
+
+ 
 
 jobs:
   build:
-
+    
     runs-on: ubuntu-latest
 
     steps:
@@ -22,3 +27,40 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml;ls
 
+ 
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+ 
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+ 
+
+        aws-region: us-east-2
+
+ 
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+
+    - name: Build, tag, and push the image to Amazon ECR
+      id: build-image
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: kiran-ecr
+        IMAGE_TAG: ${{ github.sha }}
+      run: |
+        # Build a docker container and push it to ECR
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        echo "Pushing image to ECR..."
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
