--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,6 +51,12 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
+    - name: Configure Docker
+      uses: docker/login-action@v2
+      with:
+        aws-access-key-id: ${{ secrets.DOCKERHUB_USERNAME }}
+        aws-secret-access-key: ${{ secrets.DOCKERHUB_TOKEN }}
+
 
     - name: Build, tag, and push the image to Amazon ECR
       id: build-image
