--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,12 +51,6 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Configure Docker
-      uses: docker/login-action@v2
-      with:
-        aws-access-key-id: ${{ secrets.DOCKERHUB_USERNAME }}
-        aws-secret-access-key: ${{ secrets.DOCKERHUB_TOKEN }}
-
 
     - name: Build, tag, and push the image to Amazon ECR
       id: build-image
@@ -66,7 +60,7 @@ jobs:
         IMAGE_TAG: ${{ github.sha }}
       run: |
         # Build a docker container and push it to ECR
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         echo "Pushing image to ECR..."
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
