--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,14 +7,29 @@ on:
     #iiI
  
 
-name: Build and push a docker image
+
 
  
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml;ls
+
+ 
+
+    steps:
     - name: Checkout
       uses: actions/checkout@v2
 
