--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,21 +3,24 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
- 
-    #iiI
+
  
 
-
+name: Build and push a docker image
 
  
 
 jobs:
-  build:
-    
+  deploy:
+    name: Deploy
     runs-on: ubuntu-latest
 
+ 
+
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v2
+
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
@@ -25,13 +28,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml;ls
-
- 
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+      run: mvn -B package --file pom.xml
 
  
 
@@ -51,13 +48,14 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
+ 
 
     - name: Build, tag, and push the image to Amazon ECR
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: kiran-ecr
-        IMAGE_TAG: ${{ github.sha }}
+        IMAGE_TAG: "latest"
       run: |
         # Build a docker container and push it to ECR
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
